[improvements] - enforce Java 17 as the minimum required Java version; helps to improve runtime stability and performance, and enable future enhancements   - also upgrade to Kotlin v1.7, Gradle v7.x
- update build.gradle:
  - update a bunch of 3rd party libraries
  - set test parallelism to 10
  - added `add-exports` to test task