@@ -17,6 +17,19 @@
 
 package org.nexial.core.plugins.db;
 
+import java.io.File;
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.sql.Connection;
+import java.sql.Driver;
+import java.sql.DriverManager;
+import java.sql.SQLException;
+import java.util.Map;
+import java.util.Properties;
+import javax.sql.DataSource;
+
 import org.apache.commons.beanutils.BeanUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.dbcp2.BasicDataSource;
@@ -30,19 +43,6 @@ import org.springframework.beans.BeansException;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
 import org.springframework.jdbc.datasource.SingleConnectionDataSource;
-
-import java.io.File;
-import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.sql.Connection;
-import java.sql.Driver;
-import java.sql.DriverManager;
-import java.sql.SQLException;
-import java.util.Map;
-import java.util.Properties;
-import javax.sql.DataSource;
 
 import static java.io.File.separator;
 import static java.sql.Connection.TRANSACTION_SERIALIZABLE;
@@ -190,12 +190,14 @@ public class DataAccess implements ApplicationContextAware {
 
         DataSource newDs;
         try {
-            newDs = (DataSource) Class.forName("com.Connx.jdbc.TCJdbc.TCJdbcConnectionPoolDataSource").newInstance();
+            newDs = (DataSource) Class.forName("com.Connx.jdbc.TCJdbc.TCJdbcConnectionPoolDataSource")
+                                      .getDeclaredConstructor().newInstance();
             BeanUtils.setProperty(newDs, "DSN", dsn);
             BeanUtils.setProperty(newDs, "gateway", gateway);
             if (StringUtils.isNotBlank(username)) { BeanUtils.setProperty(newDs, "user", username); }
             if (StringUtils.isNotBlank(password)) { BeanUtils.setProperty(newDs, "password", password); }
-        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | ClassNotFoundException e) {
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | ClassNotFoundException |
+                 NoSuchMethodException e) {
             throw new RuntimeException("Unable to set up Connx JDBC driver: " + e.getMessage());
         }
 
